# unifortress

./: Cargo.toml  Commands.txt  PLAN.md  README.md  check_disk.sh  encrypt_disk.sh  list_devices.bat  list_devices.sh  mount_disk.sh  prepare_disk.bat  prepare_disk.txt  prepare_disk_list.txt  set-permissions.ps1  test_check_disk.bat  test_encrypt_disk.bat  test_mount_disk.bat  test_unmount_disk.bat  unifortress.ps1  unifortress.sh  ТехническоеЗадание.txt
scripts/: build.sh  doc.sh  run.sh  test.sh
src/: decryption.rs  deferred.rs  encryption.rs  lib.rs  main.rs  mod.rs  mount.rs  utils.rs
src/crypto/: chacha.rs  hmac.rs  kdf.rs  mod.rs  xts.rs
src/fs_access/: common.rs  mod.rs  windows.rs
src/mount/: dokan_handler.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/: common.rs  linux.rs  macos.rs  mod.rs  volume_io.rs  windows.rs
xts-test/: Cargo.toml
