[package]
name = "unifortress"
version = "0.1.0"
edition = "2021"

[dependencies]
# Криптография
aes = "0.8"
xts-mode = { git = "https://github.com/pheki/xts-mode", version = "0.5.1", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Обработка ошибок
anyhow = "1.0"

# Сериализация / Десериализация
serde = { version = "1.0", features = ["derive"] } # 'derive' фича для удобного использования с struct/enum
bincode = "1.3"

# Логирование
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] } # 'derive' фича для удобного парсинга

rpassword = "7.3"

# UUID
uuid = { version = "1.7", features = ["v4"] }

# Для монтирования виртуального диска в Windows
dokan = "0.2" # Используем dokan вместо dokan-rust
dokan-sys = "0.2" # Добавляем зависимость на dokan-sys
winapi = { version = "0.3.9", features = ["winioctl", "ioapiset", "minwinbase", "minwindef"] }
